Enhance document processing and project management features
- Updated requirements.txt to include new dependencies for langchain and unstructured libraries.
- Added new scripts for starting Redis, the API server, and Celery worker processes.
- Refactored document processing logic to include additional processing statuses and improved error handling.
- Implemented a new utility for partitioning documents based on file type.
- Updated routes to utilize the new processing statuses for better tracking of document processing stages.

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,16 @@ pydantic
 dotenv
 fastapi
 uvicorn
+
 supabase
 clerk-backend-api
-boto3
+boto3 # AWS S3
 celery
 redis
+
+# RAG
+
+langchain==0.3.27
+langchain-community==0.3.27
+langchain-openai==0.3.28
+unstructured[all-docs]==0.18.11
