Enhance agent functionality and configuration management
- Updated .env.sample to include new environment variables for LangSmith and Tavily API keys.
- Enhanced configuration validation in index.py to ensure all required API keys are set.
- Refactored requirements.txt to update LangChain dependencies and include new libraries for agent functionality.
- Introduced new simple and supervisor agents for improved multi-agent coordination and retrieval capabilities.
- Added utility functions for chat history retrieval and context management in agent interactions.
- Updated chat routes to support dynamic agent selection based on project settings.

--- a/.env.sample
+++ b/.env.sample
@@ -14,3 +14,10 @@ REDIS_URL=
 OPENAI_API_KEY=
 
 SCRAPINGBEE_API_KEY=
+
+LANGSMITH_TRACING=true
+LANGSMITH_ENDPOINT=https://api.smith.langchain.com
+LANGSMITH_API_KEY=
+LANGSMITH_PROJECT=multi-modal-rag
+
+TAVILY_API_KEY=
